--- a/style.css
+++ b/style.css
@@ -3,17 +3,32 @@
 padding: 0;
 box-sizing: border-box;}
 
+:root
+{font-family:'Mulish', sans-serif;;}
 
 body
 {background-color: #121214;
-padding: 72px 104px;}
+padding: 72px 104px;
+display: grid;
+justify-content: center;}
+
+header h1
+{font-weight: 900;
+font-size: 58px;
+line-height: 73px;
+color: #02799D;}
+
+header p
+{font-weight: 600;
+font-size: 32px;
+line-height: 40px;
+color: #E1E1E6;}
 
 main
 {display: grid;
 grid-template-columns: repeat(3, 370px);
-place-content: center;
-
-gap: 48px 60px;}
+gap: 48px 60px;
+margin-top: 62px;}
 
 .card
 {background-color: #202024;
